v1.5.2
Fixed a mistake

v1.5.1
Added 3 new cards
Added Virus
Corrupt hitbox now only adds 1 Glitch unupgraded, in exchange for slightly less block
Debug buffed, now removes 1 Glitched
Broken Code is now uncommon (was rare)
Slightly increased damage of some cards
Fixed a bug that would never happen
Removed Anti Growing Insanity

v1.5.0
Requires StSLib 1.9.0
Added colours to health bars with Insanity and Glitched
Yes, that warrants an update all on it's own

v1.4.3
Added 4 new cards
Seeing Double is now uncommon (was rare)
Fixed Deep Breathing not corrupting if you don't have Insanity.

v1.4.2
Fixed softlock with Jumpscare + Necromantic totem
Fixed exploit with Jumpscare + Scarier Mask

v1.4.1
Added 3 new cards
Reduced cost and damage of no escape
Removed Triple Value

v1.4.0
Added 3 new cards
Buffed Distill Insanity, now buffs for every 2 insanity, and upgrades to cost 1
Glitches are now added on top of your draw pile
Slightly reduced damage on many cards
Greatly nerfed Unstable Strike

v1.3.1
Added 2 new cards
Fixed Deja Vu not retaining
Updated how power icons load
Updated Throwing knife VFX
Reworked Glitch Powder, now doubles damage reduction
Glitched now damages at the start of the turn

v1.3.0
Added 2 new cards
Cleaned up the description of glitch cards
Nerfed Exploitive Strike, now adds a Glitch to your draw pile
Nerfed Sci-fi book, no longer gives frost, but max orbs increased to 10
Nerfed Fantasy book, upgrade increases Metallicize instead of Regen
Halved damage reduction of Glitched
Buffed no escape, +50% base damage
Fixed card energy orbs
Cleaned up some code

v1.2.1
Consume Glitch no longer generates in combat
Consume Glitch is now capped at 20 Max HP
Changed the code of Portrait of Markov, it's now even more evil

v1.2.0
Added 3 new cards
Nerfed Throw book by 1 damage

v1.1.0
Added 4 new relics
Portrait of Markov now applies Glitched pre-battle
Fixed Temporary HP keyword
Underped Glitched description

v1.0.1
Added Changelog
Mod now automatically updates