@@ -2,7 +2,7 @@
   "modid": "YuriMod",
   "name": "Yuri Mod",
   "author_list": ["DokiDokiTulpaClub"],
-  "description": "Adds Yuri into the game, featuring 50+ new cards, 8 relics and a few nasty surprises. May contain disturbing content, which can be turned off in the settings.",
+  "description": "Adds Yuri into the game, featuring 60+ new cards, 8 relics and a few nasty surprises. May contain disturbing content, which can be turned off in the settings.",
   "credits": "Contributors: Gremious (Providing the default mod base this mod was built on)",
   "version": "1.5.2",
   "sts_version": "11-15-2018",
